Using hack to keep Zip FileChannel Alive