@@ -12,5 +12,12 @@ java -jar target/filepreviewer-1.0-SNAPSHOT.jar
 
 ### Entry point:
 ```
+-Xmx500m
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED
+--add-opens jdk.zipfs/jdk.nio.zipfs=ALL-UNNAMED
+--add-opens java.base/java.nio.channels.spi=ALL-UNNAMED
+
 org.vlegchilkin.filepreviewer.Main
 ```
+
+
